REfatoração codigo ajustes POO
