# src/domain/entities/Product.ts
@@ -1,15 +1,41 @@
-export class Product {
-	id?: number;
-	fk_idCategory: number;
-	name: string;
-	description: string;
-	price: number;
+import { Category } from "./Category";
 
-	constructor(fk_idCategory: number, name: string, description: string, price: number, id?: number) {
+export class Product {
+	private id: number;
+	private name: string;
+	private description: string;
+	private price: number;
+	private categoryId: number;
+
+
+	constructor(id: number, name: string, description: string, price: number, categoryId: number) {
 		this.id = id;
-		this.fk_idCategory = fk_idCategory;
 		this.name = name;
 		this.description = description;
 		this.price = price;
+		this.categoryId = categoryId;
 	}
+
+	// Getters
+	getId(): number {
+		return this.id;
+	}
+	
+	getName(): string {
+		return this.name;
+	}
+	
+	getDescription(): string {
+		return this.description;
+	}
+	
+	getPrice(): number {
+		return this.price;
+	}
+	
+	getCategoryId(): number {
+		return this.categoryId;
+	}
+	
+	
 }
