# src/infrastructure/routes/OrderRoute.ts
@@ -5,6 +5,7 @@ import { OrderController } from "@controllers/OrderController";
 import { CustomerAdapter } from "@adapters/CustomerAdapter";
 import { ComboAdapter } from "@adapters/ComboAdapter";
 import { CampaignAdapter } from "@adapters/CampaignAdapter";
+import { ProductAdapter } from "@adapters/ProductAdapter";
 
 export const orderRoute = Router();
 
@@ -12,11 +13,13 @@ const orderAdapter = new OrderAdapter();
 const customerAdapter = new CustomerAdapter();
 const comboAdapter = new ComboAdapter();
 const campaignAdapter = new CampaignAdapter();
+const productAdapter = new ProductAdapter();
 const orderUseCase = new OrderUseCase(
 	orderAdapter,
 	customerAdapter,
 	comboAdapter,
-    campaignAdapter
+    campaignAdapter,
+    productAdapter,
 );
 const orderController = new OrderController(orderUseCase);
 
@@ -40,7 +43,7 @@ orderRoute.post("/create", (req, res) => {
             required: true,
             content: {
                 "application/json": {
-                    schema: { $ref: '#/definitions/Order' }
+                    schema: { $ref: '#/definitions/AddOrder' }
                 }
             }
         }
@@ -59,7 +62,7 @@ orderRoute.put("/update/:id", (req, res) => {
             required: true,
             content: {
                 "application/json": {
-                    schema: { $ref: '#/definitions/Order' }
+                    schema: { $ref: '#/definitions/UpdateOrder' }
                 }
             }
         }
